Update: Cambio de background index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <title>ElectroCRE</title>
+    <link rel="icon" href="./public/images/logo_electrocre.png" type="image/png">
   </head>
 
   <body>
@@ -95,7 +96,7 @@
             </section>
             <section class="selector__fila-dos">
               <button id="buttonSuministrador">Acceso Suministrador</button>
-              <button id="buttonPersonal">Acceso Cuenta Personal</button>
+              <button id="buttonPersonal">Acceso Propietario</button>
             </section>
           </section>
 
@@ -191,10 +192,10 @@
                 <input type="password" name="contrasena" id="" />
               </section>
               <section class="CRE__buttons">
+                <a class="CRE__buttons--registrarCuenta" href="consulta.html">Registrar Cuenta</a>
                 <a class="CRE__buttons--submitButton" href="./src/views/cuenta_personal.html"
                   >Iniciar Sesión</a
                 >
-                <a class="CRE__buttons--registrarCuenta" href="consulta.html">Registrar Cuenta</a>
               </section>
             </form>
           </section>
