Update: Implementacion de background index mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/index_desktop.css" />
+    <link rel="stylesheet" href="./src/css/index_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../src/css/index_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -28,7 +29,7 @@
           />
         </section>
         <section class="nav--tab">
-          <a href="inicio.html" class="inicio">Inicio</a>
+          <!-- <a href="inicio.html" class="inicio">Inicio</a> -->
           <a
             href="https://www.gob.mx/cre/articulos/marco-juridico-aplicable-para-la-comision-reguladora-de-energia"
             class="snosotros"
@@ -140,7 +141,7 @@
               <br />
               Desde su cuenta podrá:
               <br />
-              + Subir los reportes trimestrales
+              + Subir los reportes semestrales
             </p>
             <form action="">
               <p>Correo</p>
