--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/index_desktop.css" media="screen and (min-width: 769px)"/>
-    <link rel="stylesheet" href="../src/css/index_mobile.css" media="screen and (max-width: 768px)"/>
+    <link rel="stylesheet" href="./src/css/index_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
