--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>ElectroCRE</title>
-    <link rel="icon" href="./public/images/logo_electrocre.png" type="image/png">
+    <link rel="icon" href="../public/images/logo_electrocre.png" type="image/png">
   </head>
 
   <body>
