Update: Inicio de estructura de personal_cre.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <input type="password" name="contrasena" id="" />
               </section>
               <div class="CRE__submitButton">
-                <a href="consulta.html">Iniciar Sesión</a>
+                <a href="./src/views/personal_cre.html">Iniciar Sesión</a>
               </div>
             </form>
           </section>
